--- a/module-3/12_Flexbox/student-exercise/mini-exercises/header/step-3/main.css
+++ b/module-3/12_Flexbox/student-exercise/mini-exercises/header/step-3/main.css
@@ -6,6 +6,7 @@ body {
 header {
   background-color: #F0F0F0;
   padding: 20px;
+  display: flex;
 }
 
 .logo {
@@ -20,6 +21,9 @@ ul {
   margin: 0;
   padding: 0;
   list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
 }
 
 li {
